--- a/style.css
+++ b/style.css
@@ -28,6 +28,17 @@ body{
    font-family: Roboto;
 }
 
+ul {
+   list-style: none;
+}
+
+button,
+button:focus {
+   border: none;
+   cursor: pointer; 
+   outline: none;
+}
+
 /* Header */
 header {
    display: flex;
@@ -47,4 +58,60 @@ header .logo i {
 
 header .icons .fa-search {
    margin-right: var(--padding);
+}
+
+/* SASS & LESS 
+header {
+   .logo
+   
+   .icons   ... }*/
+
+
+/* Video player */
+.player {
+   position: sticky;
+   top: 0;
+   text-align: center;
+   background-color: var(--black-color);
+}
+.player video {
+   width: 50%;
+   height: 50%;
+   max-width: 1000px;
+}
+
+.info {
+   padding: var(--padding);
+}
+
+.info .metadata .hashtags {
+   display: flex;
+   font-size: var(--font-small);
+   color: var(--blue-color);
+}
+
+.info .metadata .hashtags li {
+   margin-right: var(--padding);
+}
+
+.info .metadata .titleAndButton {
+   display: flex;
+}
+
+.info .metadata .titleAndButton .title {
+   font-size: var(--font-medium);
+   display: -webkit-box;
+   -webkit-box-orient: vertical;
+   -webkit-line-clamp: 2;
+   overflow: hidden;
+   margin-right: var(--padding);
+}
+
+.info .metadata .titleAndButton .moreBtn {
+   height: 100%;
+}
+
+.info .views {
+   font-size: var(--font-small);
+   color: var(--grey-dark-color);
 }
