--- a/style.css
+++ b/style.css
@@ -117,26 +117,65 @@ header {
 }
 
 /* action buttons */
-.actions {
+.info .actions {
    display: flex;
    justify-content: space-around;
    margin: var(--padding) 0;
 }
 
-.actions button {
+.info .actions button {
    display: flex;
    flex-direction: column;
    font-size: var(--font-small);
    color: var(--grey-dark-color);
 }
 
-.actions button i {
+.info .actions button i {
    margin: 0 auto;
    margin-bottom: calc(var(--padding) / 2);
    font-size: 16px;
 }
 
-.actions button i.active {
+.info .actions button i.active {
    color: var(--blue-color);
+}
+
+/* Channel description */
+.channel {
+   display: flex;
+   justify-content: space-between;
+   border-top: 1px solid var(--grey-light-color);
+   border-bottom: 1px solid var(--grey-light-color);
+}
+
+.channel .metadata {
+   display: flex;
+   align-items: center;
+}
+
+.channel .metadata .info {
+   display: flex;
+   flex-direction: column;
+}
+
+.channel .metadata img {
+   width: var(--avatar-size);
+   height: var(--avatar-size);
+   border-radius: 50%;
+}
+
+.channel .metadata .info .name {
+   font-size: var(--font-medium);
+}
+
+.channel .metadata .info .subscribers {
+   font-size: var(--font-small);
+   color: var(--grey-dark-color);
+}
+
+.channel .subscribe {
+   text-transform: uppercase;
+   font-size: var(--font-medium);
+   color: var(--red-color);
 }
 
